hard-gists/4427984/run.log
=== Docker Run Log for 4427984 ===
Started at: Mi 29. Okt 14:39:07 CET 2025

[2025-10-29 14:39:07] START: Running container for 4427984
[2025-10-29 14:39:08] SUCCESS: Container 5899eb9e2bb1eb6ec7ec011ea1b7a05653c6e8be249d4ed7dc4ea964276105f0 started for 4427984
=== Container logs for 4427984 ===
  File "/snippet.py", line 173
    except urllib2.HTTPError, e:
           ^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 4427984 ===
[2025-10-29 14:39:10] INFO: Container 5899eb9e2bb1eb6ec7ec011ea1b7a05653c6e8be249d4ed7dc4ea964276105f0 has stopped
